Use URI instead of URL to improve validation